# mailcue

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.deploy.yml  docker-compose.production.yml  docker-compose.yml  openapi.json  postman_collection.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  sdk-ci.yml  sdk-publish.yml  tunnel.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_auth_security.py  003_domains.py  004_server_settings.py  005_tls_certificates.py  006_mta_sts_tls_rpt.py  007_sandbox.py  008_httpbin.py  009_forwarding_rules.py  010_mailbox_signature.py  011_aliases.py  012_multi_user.py  013_phone_sandbox.py  014_tunnels.py  015_domain_record_audit.py  016_api_key_permissions.py  017_catch_all_settings.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  rate_limit.py
backend/app/aliases/: models.py  router.py  schemas.py  service.py
backend/app/auth/: models.py  router.py  schemas.py  scopes.py  service.py  utils.py
backend/app/domains/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/emails/: __init__.py  disposable.py  parser.py  router.py  schemas.py  service.py  validation.py
backend/app/events/: __init__.py  bus.py  router.py
backend/app/forwarding/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/gpg/: models.py  router.py  schemas.py  service.py
backend/app/httpbin/: models.py  router.py  schemas.py  service.py
backend/app/mailboxes/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/sandbox/: admin.py  capabilities.py  models.py  registry.py  router.py  schemas.py  service.py  signers.py  webhook_raw.py  webhook_worker.py
backend/app/sandbox/providers/: __init__.py  base.py
backend/app/sandbox/providers/bandwidth/: __init__.py  formatter.py  router.py  schemas.py  service.py
backend/app/sandbox/providers/discord/: __init__.py  formatter.py  router.py  schemas.py  service.py
backend/app/sandbox/providers/mattermost/: __init__.py  formatter.py  router.py  schemas.py  service.py
backend/app/sandbox/providers/plivo/: __init__.py  formatter.py  router.py  service.py
backend/app/sandbox/providers/slack/: __init__.py  formatter.py  router.py  schemas.py  service.py
backend/app/sandbox/providers/telegram/: __init__.py  formatter.py  router.py  schemas.py  service.py
backend/app/sandbox/providers/telnyx/: __init__.py  formatter.py  router.py  service.py
backend/app/sandbox/providers/twilio/: __init__.py  calls.py  formatter.py  numbers.py  porting.py  router.py  schemas.py  service.py  trusthub.py
backend/app/sandbox/providers/vonage/: __init__.py  formatter.py  router.py  service.py
backend/app/sandbox/providers/whatsapp/: __init__.py  formatter.py  router.py  schemas.py  service.py
backend/app/sandbox/scripts/: __init__.py  generate_provider_certs.py  generate_provider_nginx.py
backend/app/sandbox/seeds/: __init__.py  available_numbers.py
backend/app/sandbox/voice/: __init__.py  interpreter.py  worker.py
backend/app/system/: models.py  router.py  service.py
backend/app/tunnels/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_api_key_permissions.py  test_domains.py  test_email_threading.py  test_email_validation.py  test_gpg_auto_import.py  test_mailboxes_catchall.py  test_production_catchall.py  test_production_gating.py  test_sandbox_management.py  test_sandbox_mattermost.py  test_sandbox_slack.py  test_sandbox_telegram.py  test_sandbox_twilio.py  test_tunnels.py
backend/tests/sandbox/: test_admin_simulate_inbound.py  test_bandwidth_sandbox.py  test_plivo_sandbox.py  test_telnyx_sandbox.py  test_twilio_sandbox.py  test_voice_interpreter.py  test_vonage_sandbox.py  test_webhook_delivery_from_wire.py  test_webhook_signing.py
clawhub-skill/: SKILL.md
config/nginx/: provider_proxies.conf.template
docs/: index.html  robots.txt  sitemap.xml
docs/guides/: api.html  api.md  architecture.html  architecture.md  ci.html  ci.md  clients.html  clients.md  configuration.html  configuration.md  development.html  development.md  mcp.html  mcp.md  networking.html  networking.md  production.html  production.md  sandbox.html  sandbox.md  tunnel.html  tunnel.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: build_docs.py  export_openapi.py  openapi_to_postman.py
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/mailcue/: __init__.py  _version.py  auth.py  client.py  events.py  exceptions.py  transport.py  types.py
sdks/python/mailcue/resources/: __init__.py  _base.py  aliases.py  api_keys.py  domains.py  emails.py  gpg.py  mailboxes.py  system.py
sdks/python/tests/: conftest.py  test_client.py  test_emails.py  test_events.py  test_mailboxes.py  test_transport.py
tests/: e2e-email-cicd.sh  e2e-forwarding-rules.sh  e2e-sandbox-discord.sh  e2e-sandbox-management.sh  e2e-sandbox-mattermost.sh  e2e-sandbox-slack.sh  e2e-sandbox-telegram.sh  e2e-sandbox-twilio.sh  e2e-sandbox-whatsapp.sh  e2e.sh
tunnel/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
tunnel/crates/edge/: Cargo.toml
tunnel/crates/edge/src/: config.rs  defaults.rs  dns.rs  main.rs  relay.rs  smtp_client.rs
tunnel/crates/proto/: Cargo.toml
tunnel/crates/proto/src/: authorized.rs  channel.rs  frame.rs  handshake.rs  keypair.rs  lib.rs
tunnel/crates/sidecar/: Cargo.toml
tunnel/crates/sidecar/src/: config.rs  main.rs  metrics.rs  pool.rs  relay.rs  selector.rs  smtp_server.rs  tunnels.rs
tunnel/deploy/: install-edge.sh
tunnel/deploy/docker/: Dockerfile.sidecar  docker-compose.tunnel.yml
tunnel/deploy/systemd/: mailcue-relay-edge.service
tunnel/docs/: PROTOCOL.md  SECURITY.md
tunnel/scripts/: smoke-test.sh
(+184 files in other folders)
