[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailcue-backend"
version = "0.1.0"
description = "MailCue — Realistic Email Testing Server (Backend API)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MailCue Contributors" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "aiosmtplib>=3.0.0",
    "aioimaplib>=2.0.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.12",
    "python-gnupg>=0.5.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "slowapi>=0.1.9",
    "dnspython>=2.6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.15.10",
    "coverage>=7.6",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends pattern)
    "TC001",  # type-checking block (conflicts with runtime imports in FastAPI DI)
    "TC002",  # type-checking block (conflicts with runtime imports in FastAPI DI)
    "TC003",  # type-checking block (conflicts with Pydantic/SQLAlchemy runtime needs)
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "aioimaplib.*",
    "aiosmtplib.*",
    "jose.*",
    "gnupg.*",
    "dns.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
