[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailcue"
dynamic = ["version"]
description = "Official Python SDK for MailCue — open-source email testing and production server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Olib AI", email = "hello@olib.ai" },
]
keywords = [
    "mailcue",
    "email",
    "smtp",
    "imap",
    "postfix",
    "dovecot",
    "transactional-email",
    "email-testing",
    "mailbox",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.7.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/Olib-AI/mailcue"
Repository = "https://github.com/Olib-AI/mailcue"
Documentation = "https://github.com/Olib-AI/mailcue#readme"
Issues = "https://github.com/Olib-AI/mailcue/issues"

[tool.hatch.version]
path = "mailcue/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["mailcue"]

[tool.hatch.build.targets.sdist]
include = [
    "/mailcue",
    "/README.md",
    "/LICENSE",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
