[package]
name = "mailcue-relay-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OVH-side listener that relays SMTP from MailCue sidecars to public MX servers"

[[bin]]
name = "mailcue-relay-edge"
path = "src/main.rs"

[dependencies]
mailcue-relay-proto = { path = "../proto" }

tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }

snow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }

clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

hickory-resolver = { workspace = true }
gethostname = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
