[package]
name = "mailcue-relay-sidecar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Loopback SMTP submission shim that tunnels MailCue outbound mail through edge VPS instances"

[[bin]]
name = "mailcue-relay-sidecar"
path = "src/main.rs"

[dependencies]
mailcue-relay-proto = { path = "../proto" }

tokio = { workspace = true }

snow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }

clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

notify = { workspace = true }
ipnet = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
gethostname = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3.10"
